use try with resource to close Files.list() in LocalFileSystem.listFolders.