@@ -26,7 +26,6 @@ import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.astraea.common.Configuration;
 import org.astraea.common.Utils;
 import org.astraea.fs.FileSystem;
@@ -73,17 +72,19 @@ public class LocalFileSystem implements FileSystem {
   private synchronized List<String> listFolders(String path, boolean requireFile) {
     var folder = resolvePath(path);
     if (!Files.isDirectory(folder)) throw new IllegalArgumentException(path + " is not a folder");
-    return Utils.packException(() -> Files.list(folder))
-        .filter(f -> requireFile ? Files.isRegularFile(f) : Files.isDirectory(f))
-        .map(Path::toAbsolutePath)
-        .map(
-            p ->
-                Path.of("/")
-                    .resolve(
-                        root.map(r -> p.subpath(Path.of(r).getNameCount(), p.getNameCount()))
-                            .orElse(p))
-                    .toString())
-        .collect(Collectors.toList());
+    try (var directories = Utils.packException(() -> Files.list(folder))) {
+      return directories
+          .filter(f -> requireFile ? Files.isRegularFile(f) : Files.isDirectory(f))
+          .map(Path::toAbsolutePath)
+          .map(
+              p ->
+                  Path.of("/")
+                      .resolve(
+                          root.map(r -> p.subpath(Path.of(r).getNameCount(), p.getNameCount()))
+                              .orElse(p))
+                      .toString())
+          .toList();
+    }
   }
 
   @Override
